--- a/server/package.json
+++ b/server/package.json
@@ -29,8 +29,9 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "argon2": "^0.41.1",
-    "mongoose": "^8.9.6",
+    "class-validator": "^0.14.1",
     "mongodb": "^5.9.2",
+    "mongoose": "^8.9.6",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
