создал страницу регистрации, подключил rtk query и создал builder

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,10 @@
 {
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"] // Добавьте этот алиас
+    }
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
