--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
